--- a/conf/file_tables.conf
+++ b/conf/file_tables.conf
@@ -1,69 +1,76 @@
 [
     {
-        "data_source": "illinnifidev01",
+        "data_source": "illininf1gr",
 	    "files": [
 	        {
-				"name": "pets(.*).csv",
+				"name": "Warsaw_(.*).csv",
 				"regex":"true",
-				"schema_path": "/temp-data/schemas/pets-schema.json" ,
-				"file_path":"/temp-data/tables/",
+				"schema_path": "/pmart/infgr/Informatica/work/Nifi_testing/Schema_Registry/Warsaw.json" ,
+				"file_path":"/pmart/infgr/Informatica/work/Nifi_testing/Warsaw_SDI/",
 				"if_fails":"drop",
+				"username":"infgr",
+				"password":"Amdocs123",
 				"csv_delimiter":",",
 				"description":[
 					{
-						"name": "test_tbl",
+						"name": "Warsaw",
 						"description" : "",
 						"period": "3 days",
 						"column_list": [
 							{
-								"name" : "id",
+								"name" : "Date Occurred",
 								"post_process": "",
 								"description" : "Type inferred from ' 2 '"
 							}, {
-								"name" : "owner_id",
+								"name" : "Time Occurred",
 								"post_process": "",
 								"description" : "Type inferred from ' 1 '"
 							}, {
-								"name" : "name",
+								"name" : "Location",
+								"post_process": "",
+								"description" : "Type inferred from ' Shtut '"
+							}, {
+								"name" : "Message",
+								"post_process": "",
+								"description" : "Type inferred from ' Shtut '"
+							},
+							{
+								"name" : "First Name",
+								"post_process": "",
+								"description" : "Type inferred from ' 2 '"
+							}, {
+								"name" : "Last Name",
+								"post_process": "",
+								"description" : "Type inferred from ' 1 '"
+							}, {
+								"name" : "Workgroup",
+								"post_process": "",
+								"description" : "Type inferred from ' Shtut '"
+							}, {
+								"name" : "Floor",
+								"post_process": "",
+								"description" : "Type inferred from ' Shtut '"
+							},
+							{
+								"name" : "Anti-Passback Area",
+								"post_process": "",
+								"description" : "Type inferred from ' 2 '"
+							}, {
+								"name" : "Point Group Name",
+								"post_process": "",
+								"description" : "Type inferred from ' 1 '"
+							}, {
+								"name" : "Card Number",
+								"post_process": "",
+								"description" : "Type inferred from ' Shtut '"
+							}, {
+								"name" : "Employee Number",
 								"post_process": "",
 								"description" : "Type inferred from ' Shtut '"
 							}
 						]
 					}
 				]
-			},
-			{
-
-				"name": "pets_xls.xls",
-				"regex":"false",
-        	                "schema_path": "/temp-data/schemas/pets-schema.json" ,
-              	                "file_path":"/temp-data/tables/pets_xls.xls",
-				"if_fails":"keep",
-				"csv_delimiter":",",
-                                "description":[
-                                        {
-                                                "name": "excel_tbl",
-                                                "description" : "",
-                                                "period": "3 days",
-                                                "column_list": [
-                                                        {
-                                                                "name" : "id",
-                                                                "post_process": "",
-                                                                "description" : "Type inferred from ' 2 '"
-                                                        }, {
-                                                                "name" : "owner_id",
-                                                                "post_process": "",
-                                                                "description" : "Type inferred from ' 1 '"
-                                                        }, {
-                                                                "name" : "name",
-                                                                "post_process": "",
-                                                                "description" : "Type inferred from ' Shtut '"
-                                                        }
-                                                ]
-                                        }
-                                ]
-
-
 			}
 		]
     }
